table insertion done - needs correction, footer adjust

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             <div>
             <table id="pmdr">
-                <tr>
+                <tr id="newRow">
                     <th>Start time</th>
                     <th>Pomodoro/Break</th>
                     <th>End time</th>
