endTime function added, calculating session ending time

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
             <h1><img src="tomato.png">  Pomodoro Logger  <img src="tomato.png"></h1>
 
             <div id="flexy">
+                <div>
+                    <label for="start_time" id="st_label">
+                        <input type="text" placeholder="HH:MM" id="start_time">
+                    </label>
+                </div>
                 <div id="myform">
                     <label for="pmdr" id="pmdr_label">Pomodoro:
                         <input type="checkbox" id="pmdr_check">
