--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             <h1><img src="tomato.png">  Pomodoro Logger  <img src="tomato.png"></h1>
 
             <div id="flexy">
-                <div>
+                <!-- <div>
                     <label for="start_time" id="st_label">
                         <input type="text" placeholder="HH:MM" id="start_time">
                     </label>
-                </div>
+                </div> -->
                 <div id="myform">
                     <label for="pmdr" id="pmdr_label">Pomodoro:
                         <input type="checkbox" id="pmdr_check">
@@ -42,7 +42,8 @@
             </div>
 
             <div id="foot">
-                <footer><a href="https://www.flaticon.com/free-icons/tomato" title="tomato icons">Tomato icons created by Pixel perfect - Flaticon</a></footer>
+                <footer><a href="https://www.flaticon.com/free-icons/tomato" title="tomato icons">Tomato icons created by Pixel perfect - Flaticon</a> 
+                    - Pomodoro Logger created by (C) <a href="https://andrejmoltok.github.io/Katoteshikaari" target="_blank">András Pál Ciocan</a> - 2022</footer>
             </div>
 
         </div>
