--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
 
-            <div>
+            <div class="pmdr">
             <table id="pmdr">
                 <tr id="newRow">
                     <th>Start time</th>
