--- a/index.html
+++ b/index.html
@@ -22,8 +22,17 @@
                     <label for="pmdr" id="pmdr_label">Pomodoro:
                         <input type="checkbox" id="pmdr_check">
                     </label>
+                    <label for="25min" id="25min_label">25min
+                        <input type="checkbox" id="25min_check">
+                    </label>
                     <label for="break" id="break_label">Break:
                         <input type="checkbox" id="break_check">
+                    </label>
+                    <label for="5min">5min
+                        <input type="checkbox" id="5min_label">
+                    </label>
+                    <label for="10min">10min
+                        <input type="checkbox" id="10min_check">
                     </label>
                 </div>
                 <div>
