html code corrections

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                     <label for="break" id="break_label">Break:
                         <input type="checkbox" id="break_check">
                     </label>
-                    <label for="5min">5min
-                        <input type="checkbox" id="5min_label">
+                    <label for="5min" id="5min_label">5min
+                        <input type="checkbox" id="5min_check">
                     </label>
-                    <label for="10min">10min
+                    <label for="10min" id="10min_label">10min
                         <input type="checkbox" id="10min_check">
                     </label>
                 </div>
