html - corrections, css - modifications, js - added variables for checkbox and labels

--- a/index.html
+++ b/index.html
@@ -19,21 +19,25 @@
                     </label>
                 </div> -->
                 <div id="myform">
-                    <label for="pmdr" id="pmdr_label">Pomodoro:
-                        <input type="checkbox" id="pmdr_check">
-                    </label>
-                    <label for="25min" id="25min_label">25min
-                        <input type="checkbox" id="25min_check">
-                    </label>
-                    <label for="break" id="break_label">Break:
-                        <input type="checkbox" id="break_check">
-                    </label>
-                    <label for="5min" id="5min_label">5min
-                        <input type="checkbox" id="5min_check">
-                    </label>
-                    <label for="10min" id="10min_label">10min
-                        <input type="checkbox" id="10min_check">
-                    </label>
+                    <div>
+                        <label for="pmdr_check" id="pmdr_label">Pomodoro:
+                            <input type="checkbox" id="pmdr_check">
+                        </label>
+                        <label for="min25_check" id="min25_label">25min
+                            <input type="checkbox" id="min25_check">
+                        </label>
+                    </div>
+                    <div>
+                        <label for="break_check" id="break_label">Break:
+                            <input type="checkbox" id="break_check">
+                        </label>
+                        <label for="min5_check" id="min5_label">5min
+                            <input type="checkbox" id="min5_check">
+                        </label>
+                        <label for="min10_check" id="min10_label">10min
+                            <input type="checkbox" id="min10_check">
+                        </label>
+                    </div>
                 </div>
                 <div>
                     <button onclick="logMySession()">Log my session</button>
