added reset button and reset() function, corrected endTime() function

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                         </label>
                 </div>
                 <div>
-                    <button onclick="logMySession()">Log my session</button>
+                    <button id="log" onclick="logMySession()">Log my session</button>
+                    <button id="reset" onclick="reset()">Reset</button>
                 </div>
             </div>
 
