--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <div>
                     <button id="log" onclick="logMySession()">Log my session</button>
-                    <button id="reset" onclick="reset()">Reset</button>
+                    <button id="reset" onclick="reset()">Reset timer</button>
                 </div>
             </div>
 
